css/main.css
html {
  box-sizing: border-box;
  font: normal 100%/1.5 Georgia, serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

.grains {
  margin: 0;
  padding: 0;

  list-style-type: none;
}

.grains li {
  margin-bottom: 2rem;
}

.grains img {
  width: 100px;

  float: left;
  margin-right: .8rem;
}

.grains h2 {
  font-weight: bold;
  font-size: 1rem;
  margin: 0;
}

.grains p {
  font-style: italic;
  margin: 0;
}

